--- a/src/main/webapp/form2.html
+++ b/src/main/webapp/form2.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>zadanie2</title>
 </head>
 <body>
+<form action="post2" method="post">
 
+    <input type="text" name="phrase">
+    <p></p>
+
+    </label>
+    <strong>Jestem świadomy konsekwencji</strong>
+    <input type="checkbox" name="consequences">
+    </label>
+
+    <p></p>
+    <input type="submit">
+
+</form>
 </body>
 </html>
